--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -1,10 +1,19 @@
-<section class='container'> 
-		<div class='user_profile'>
-			<h2>{{user.username}}</a></h2>
-			<div class='avatar'>{{user.avatar}}</div>
-				<ul>
-					<li>{{user.location}}</li>
-					
-				</ul>
-		</div>
-</section>
+<nav>
+    <ul>
+        <li><a href='index.html'>Home</a></li>
+        <li><a href='index.html'>About</a></li>
+        <a href='templates/productIndex.html'>All Products</a>
+        <a href='templates/productNew.html'>Add a Product</a>
+    </ul>
+</nav>
+
+	<section class='container'> 
+			<div class='user_profile'>
+				<h2>{{user.username}}</a></h2>
+				<div class='avatar'>{{user.avatar}}</div>
+					<ul>
+						<li>{{user.location}}</li>
+						
+					</ul>
+			</div>
+	</section>
