--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -1,9 +1,19 @@
-<section class='container'> 
-		<div class='login_form'>
-			<h2>{{user.username}}</a></h2>
-				<ul>
-					<li>{{user.email}}</li>
-					<li>{{user.password}}</li>
-				</ul>
-		</div>
-</section>
+<nav>
+    <ul>
+        <li><a href='index.html'>Home</a></li>
+        <li><a href='index.html'>About</a></li>
+        <li><a href='templates/profile.html'>Profile</a>
+        <a href='templates/productIndex.html'>All Products</a>
+        <a href='templates/productNew.html'>Add a Product</a>
+    </ul>
+</nav>
+
+	<section class='container'> 
+			<div class='login_form'>
+				<h2>{{user.username}}</a></h2>
+					<ul>
+						<li>{{user.email}}</li>
+						<li>{{user.password}}</li>
+					</ul>
+			</div>
+	</section>
