--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,15 +1,25 @@
-<section class='container'>
-<!-- Repeat directive iterates over products collection to render each product--> 
-	<div ng-repeat='product in products'>
-		<div>
-			<h2 class='product_name'><a href='/#/products/{{product.product_name}}'>{{product.product_name}}</a></h2>
-				<ul>
-					<li>{{product.company_name}}</li>
-					<li>{{product.sector}}</li>
-					<li>{{product.industry}}</li>
-					<li>{{product.comments}}</li>
-					<li>{{product.image}}</li>
-				</ul>
+<nav>
+    <ul>
+        <li><a href='index.html'>Home</a></li>
+        <li><a href='index.html'>About</a></li>
+        <li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
+        <li><a href='templates/profile.html'>Profile</a>
+        <a href='templates/productIndex.html'>All Products</a>
+    </ul>
+</nav>
+
+	<section class='container'>
+	<!-- Repeat directive iterates over products collection to render each product--> 
+		<div ng-repeat='product in products'>
+			<div>
+				<h2 class='product_name'><a href='/#/products/{{product.product_name}}'>{{product.product_name}}</a></h2>
+					<ul>
+						<li>{{product.company_name}}</li>
+						<li>{{product.sector}}</li>
+						<li>{{product.industry}}</li>
+						<li>{{product.comments}}</li>
+						<li>{{product.image}}</li>
+					</ul>
+			</div>
 		</div>
-	</div>
-</section>
+	</section>
