--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -2,8 +2,8 @@
     <ul>
         <li><a href='index.html'>Home</a></li>
         <li><a href='index.html'>About</a></li>
-        <a href='templates/productIndex.html'>All Products</a>
-        <a href='templates/productNew.html'>Add a Product</a>
+        <li><a href='productIndex.html'>All Products</a></li>
+        <li><a href='productNew.html'>Add a Product</a></li>
     </ul>
 </nav>
 
