--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,10 +1,10 @@
 <nav>
     <ul>
         <li><a href='index.html'>Home</a></li>
-        <li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-        <li><a href='templates/profile.html'>Profile</a>
-        <a href='templates/productIndex.html'>All Products</a>
-        <a href='templates/productNew.html'>Add a Product</a>
+        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
+        <li><a href='profile.html'>Profile</a></li>
+        <li><a href='productIndex.html'>All Products</a></li>
+        <li><a href='productNew.html'>Add a Product</a></li>
     </ul>
 </nav>
     <div class='about_summary'>
