--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -2,9 +2,9 @@
     <ul>
         <li><a href='index.html'>Home</a></li>
         <li><a href='index.html'>About</a></li>
-        <li><a href='templates/profile.html'>Profile</a>
-        <a href='templates/productIndex.html'>All Products</a>
-        <a href='templates/productNew.html'>Add a Product</a>
+        <li><a href='profile.html'>Profile</a>
+        <li><a href='productIndex.html'>All Products</a></li>
+        <li><a href=' productNew.html'>Add a Product</a></li>
     </ul>
 </nav>
 
