--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,10 +1,9 @@
 <nav>
     <ul>
         <li><a href='index.html'>Home</a></li>
-        <li><a href='index.html'>About</a></li>
-        <li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-        <li><a href='templates/profile.html'>Profile</a>
-        <a href='templates/productIndex.html'>All Products</a>
+        <li><a href='about.html'>About</a></li>
+        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
+        <li><a href='profile.html'>Profile</a></li>
     </ul>
 </nav>
 
