--- a/client/public/templates/productNew.html
+++ b/client/public/templates/productNew.html
@@ -2,9 +2,9 @@
     <ul>
         <li><a href='index.html'>Home</a></li>
         <li><a href='index.html'>About</a></li>
-        <li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-        <li><a href='templates/profile.html'>Profile</a>
-        <a href='templates/productIndex.html'>All Products</a>
+        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
+        <li><a href='profile.html'>Profile</a></li>
+        <li><a href='productIndex.html'>All Products</a></li>
     </ul>
 </nav>
 <!-- Register a controller for section of application. -->
