--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -2,10 +2,10 @@
     <ul>
         <li><a href='index.html'>Home</a></li>
         <li><a href='index.html'>About</a></li>
-        <li><a href='templates/signup.html'>Sign Up</a> or <a href='templates/login.html'>Login</a></li>
-        <li><a href='templates/profile.html'>Profile</a>
-        <a href='templates/productIndex.html'>All Products</a>
-        <a href='templates/productNew.html'>Add a Product</a>
+        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
+        <li><a href='profile.html'>Profile</a></li>
+        <li><a href='productIndex.html'>All Products</a></li>
+        <li><a href='productNew.html'>Add a Product</a></li>
     </ul>
 </nav>
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
