updates all template files

--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,45 +1,49 @@
 <nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
-        <li><a href='profile.html'>Profile</a></li>
-        <li><a href='productIndex.html'>All Products</a></li>
-        <li><a href='productNew.html'>Add a Product</a></li>
-    </ul>
+    <a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+    <a href='profile.html'>Profile</a>
+    <a href='productIndex.html'>All Products</a>
+    <a href='productNew.html'>Add a Product</a>
 </nav>
     <div class='about_summary'>
-    <h1>About</h1>
-    	<p>EcoView is an application that allows users to search and filter through sectors and their associated industries to add a product review.</p>
-        <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
-    	<p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
-    	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
+        <h1>About</h1>
+        	<p>EcoView is an application that allows users to search and filter through sectors and their associated industries to add a product review.</p>
+            <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these seemingly cheap expenses result in real, sometimes permanent damage to the world around us.</p>
+        	<p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
+        	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
 </div>
 
 <div class='glossary'>
-<h1>Glossary</h1>
-	<h2>Sector:</h2>
-    	<p>One of a few general segments in the economy within which a large group of companies can be categorized. An economy can be broken down into about a dozen sectors, which can describe nearly all of the business activity in that economy.</p>
-   	<h2>Industry:</h2>
-    	<ul>
-        	<li>A much more specific grouping of companies with highly similar business activities. Essentially, industries are created by further breaking down sectors into more defined groupings. Each of the dozen or so sectors will have a varying number of industries, but it can be in the hundreds.</li>
-        </ul>
-    <h2><a href='http://www.investopedia.com/ask/answers/05/industrysector.asp'>Sustainability</a>:</h2>
-    	<ul>
-    		<li>capable of being sustained</li>
-            <li>of, relating to, or being a method of harvesting or using a resource so that the resource is not depleted or permanently damaged</li>
-            <li> of or relating to a lifestyle involving the use of sustainable methods</li>
-        </ul>
-          	
-    <h2>Renewable:</h2>
+    <h1>Glossary</h1>
+    	<h2>Sector:</h2>
+        	<p>One of a few general segments in the economy within which a large group of companies can be categorized. An economy can be broken down into about a dozen sectors, which can describe nearly all of the business activity in that economy.</p>
+       	<h2>Industry:</h2>
+        	<ul>
+            	<li>A much more specific grouping of companies with highly similar business activities. Essentially, industries are created by further breaking down sectors into more defined groupings. Each of the dozen or so sectors will have a varying number of industries, but it can be in the hundreds.</li>
+            </ul>
+        <h2><a href='http://www.investopedia.com/ask/answers/05/industrysector.asp'>Sustainability</a>:</h2>
+        	<ul>
+        		<li>capable of being sustained</li>
+                <li>of, relating to, or being a method of harvesting or using a resource so that the resource is not depleted or permanently damaged</li>
+                <li> of or relating to a lifestyle involving the use of sustainable methods</li>
+            </ul>         	
+        <h2>Renewable:</h2>
 </div>
             	
 <div class='logos'>
 <!-- Organize logo ceritifcation info by sector and industry -->
 	<div class='agribuisness'>
-	</div>
+        <div class='dairy'>
+
+        </div>
+    </div>
+</div>
 
 <div class='sources'>
 <h1>Methodology and Data</h1>
  <p><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</p>
 </div>
 </div>
+
+<footer>
+    <a href='index.html'>Home</a>
+</footer>
