--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -1,11 +1,7 @@
 <nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='index.html'>About</a></li>
-        <li><a href='profile.html'>Profile</a>
-        <li><a href='productIndex.html'>All Products</a></li>
-        <li><a href=' productNew.html'>Add a Product</a></li>
-    </ul>
+	<a href='profile.html'>Profile</a>
+    <a href='productIndex.html'>All Products</a>
+    <a href=' productNew.html'>Add a Product</a>
 </nav>
 
 	<section class='container'> 
@@ -17,3 +13,7 @@
 					</ul>
 			</div>
 	</section>
+<footer>
+	<a href='index.html'>Home</a>
+    <a href='index.html'>About</a>
+</footer>
