--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -1,10 +1,6 @@
-<nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='about.html'>About</a></li>
-        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
-        <li><a href='profile.html'>Profile</a></li>
-    </ul>
+<nav>	
+	<a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+    <a href='profile.html'>Profile</a>
 </nav>
 
 	<section class='container'>
@@ -22,3 +18,7 @@
 			</div>
 		</div>
 	</section>
+<footer>
+	<a href='index.html'>Home</a>
+    <a href='index.html'>About</a>
+</footer>
