--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -1,12 +1,8 @@
 <nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='index.html'>About</a></li>
-        <li><a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a></li>
-        <li><a href='profile.html'>Profile</a></li>
-        <li><a href='productIndex.html'>All Products</a></li>
-        <li><a href='productNew.html'>Add a Product</a></li>
-    </ul>
+	<a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+	<a href='profile.html'>Profile</a>
+    <a href='productIndex.html'>All Products</a>
+    <a href='productNew.html'>Add a Product</a>
 </nav>
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
 	 -->
@@ -22,3 +18,7 @@
 				</ul>
 		</div>
 	</section>
+<footer>
+	<a href='index.html'>Home</a>
+    <a href='index.html'>About</a>
+</footer>
