--- a/client/public/templates/profile.html
+++ b/client/public/templates/profile.html
@@ -1,19 +1,15 @@
 <nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='index.html'>About</a></li>
-        <li><a href='productIndex.html'>All Products</a></li>
-        <li><a href='productNew.html'>Add a Product</a></li>
-    </ul>
+	<a href='productIndex.html'>All Products</a>
+    <a href='productNew.html'>Add a Product</a>
 </nav>
-
 	<section class='container'> 
 			<div class='user_profile'>
-				<h2>{{user.username}}</a></h2>
-				<div class='avatar'>{{user.avatar}}</div>
-					<ul>
-						<li>{{user.location}}</li>
-						
-					</ul>
+				<h2 class='user_username'>{{user.username}}</a></h2>
+				<div class='user_avatar'>{{user.avatar}}</div>
+				<div class='user_location'>{{user.location}}</div>
 			</div>
 	</section>
+<footer>
+	<a href='index.html'>Home</a>
+	<a href='index.html'>About</a>
+</footer>
