--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -1,21 +1,49 @@
 <nav>
-    <ul>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='index.html'>About</a></li>
-        <li><a href='login.html'>Login</a></li>
-        <li><a href='profile.html'>Profile</a></li>
-        <li><a href='productIndex.html'>All Products</a></li>
-        <li><a href='productNew.html'>Add a Product</a></li>
-    </ul>
+	<a href='login.html'>Login</a><
+	<a href='profile.html'>Profile</a>
+	<a href='productIndex.html'>All Products</a>
+	<a href='productNew.html'>Add a Product</a>
 </nav>
 	<section class='container'> 
 			<div class='signup_form'>
-				<h2>{{user.username}}</a></h2>
-					<ul>
-						<li>{{user.email}}</li>
-						<li>{{user.password}}</li>
-						<li>{{user.location}}</li>
-						<li>{{user.avatar}}</li>
-					</ul>
+			<!-- Register a controller for signup page-->
+			<form id='signup-form' ng-controller="SignupController as signupCtrl" ng-submit="submit()">
+				<!-- Username -->
+				<table style='width:100%''>
+					<div class='form labels'>
+						<label for="User-username">Username: {{ user.username }}</label>
+						<!-- Bind HTML element's value to model. -->
+						<input id='form-label-name' type="text" id="User-username" ng-model="User.username" placeholder='Your name here'>
+					</div></tr>
+					<!-- Email -->
+					<tr><div class='form labels'>
+						<label for="User-email">Email: {{ user.email }}</label>
+						<input type="text" id="User-email" ng-model="User-email.email" placeholder='youremail@email.com'>
+					</div></tr>
+					<!-- Password -->
+					<tr><div class='form labels'>
+						<label for="User-password">Password: {{ user.password }}</label>
+						<input type="text" id="User-password" ng-model="User.password" placeholder=''>
+					</div></tr>
+					<!-- Location -->
+					<tr><div class='form labels'>
+						<label for="User-location">Location: {{ user.location }}</label>
+						<input type="text" id="User-location" ng-model="User.location" placeholder=''>
+					</div></tr>
+					<!-- Avatar -->
+					<tr><div class='form labels'>
+						<label for="User-avatar">Avatar: {{ user.avatar }}</label>
+						<input type="text" id="User-avatar" ng-model="User-avatar.avatar" placeholder='IMG URL'>
+					</div></tr>
+					<!-- Signup -->
+					<div>
+							<input type='submit' value='Sign Up!'>
+					</div>
+				</table>
+			</form>
 			</div>
 	</section>
+<footer>
+	<a href='index.html'>Home</a>
+	<a href='index.html'>About</a>
+</footer>
