--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -14,7 +14,10 @@
 
 <div class='glossary'>
     <h1>Glossary</h1>
-    	<h2>Sector:</h2>
+    	<h2>Biodegradable:</h2>
+            <p>capable of being broken down especially into innocuous products by the action of living things (as microorganisms)</p>
+
+        <h2>Sector:</h2>
         	<p>One of a few general segments in the economy within which a large group of companies can be categorized. An economy can be broken down into about a dozen sectors, which can describe nearly all of the business activity in that economy.</p>
        	<h2>Industry:</h2>
         	<ul>
@@ -31,8 +34,28 @@
             	
 <div class='logos'>
 <!-- Organize logo ceritifcation info by sector and industry -->
-	<div class='agribuisness'>
-        <div class='dairy'>
+	<div class='food_and_beverage'>
+        <ul>
+            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wsda-organic.png'/>
+            <li>WSDA Organic provides technical information about organic food production and assists in the development of markets for the organic food industry</li>
+            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-sustainability-mark.png'/>
+            <li>WQA Sustainability Mark means that production of the listed drinking water treatment systems has been audited and evaluated by the Water Quality Association</li>
+            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-gold-seal.png'/>
+            <li>WQA Gold Seal offers certification of all products and chemicals that contact drinking water. </li>
+        </ul>
+    <div class='energy'>
+        <ul>
+            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/WindMade.png'/>
+            <li>WindMade label identifys products and companies using wind energy. </li>
+        </ul>
+    </div>
+
+    <div class='envrionment'>
+     <ul>
+            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wildlife-habitat.png'/>
+            <li>Wildlife Habitat Conservation Certification recognizes wildlife habitat management and conservation education programs.</li>
+        </ul>
+    </div>
 
         </div>
     </div>
