--- a/client/public/templates/login.html
+++ b/client/public/templates/login.html
@@ -15,5 +15,5 @@
 	</section>
 <footer>
 	<a href='index.html'>Home</a>
-    <a href='index.html'>About</a>
+    <a href='about.html'>About</a>
 </footer>
