--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -20,5 +20,5 @@
 	</section>
 <footer>
 	<a href='index.html'>Home</a>
-    <a href='index.html'>About</a>
+    <a href='about.html'>About</a>
 </footer>
