--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -45,5 +45,5 @@
 	</section>
 <footer>
 	<a href='index.html'>Home</a>
-	<a href='index.html'>About</a>
+	<a href='templates/about.html'>About</a>
 </footer>
