--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -12,6 +12,32 @@
         	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
 </div>
 
+    <div class='threats'>
+        <h2>What are some of the biggest threats faced by earth and all species today?</h2>
+            <h3>Fishing and Bycatch</h3>
+            <h3>Climate Change</h3>
+            <h3>Deforestation</h3>
+            <img src='https://media.giphy.com/media/R8c8b8EWKIKoU/giphy.gif' width="300" height="300"/>
+            <h3>Animal Agriculture</h3>
+            <h3>Wildlife trade and poaching</h3>
+            <img src='caged.gif' width="300" height="300"/>
+            <h3>Oil & Gas Deveopment / Extraction</h3>
+            <h3>Waste</h3>
+            <h3>Infrastructure</h3>
+            <h3>Pollution</h3>
+            <h3>Soil Erosion and Degredation</h3>
+            <img src='oil.gif' width="300" height="300"/>
+            <img src='https://media.giphy.com/media/10lOFFB9NizBrW/giphy.gif' width="300" height="300"/>
+            <img src='https://media.giphy.com/media/ekb69d2XpdWSY/giphy.gif' width="300" height="300"/>
+            <img src='hhttps://media.giphy.com/media/11iHkEcgPc0Gkw/giphy.gif' width="300" height="300"/>
+            <img src='https://media.giphy.com/media/eyoofAftoUKic/giphy.gif' width="300" height="300"/>
+            <img src='https://media.giphy.com/media/12tdIJvLTmxs7C/giphy.gif' width="300" height="300"/>
+</div>
+<div class='alternatives'>
+        <h2>What alternative solutions and tools exist?</h2>
+            <h3>Hemp</h3>
+            
+</div>
 <div class='glossary'>
     <h1>Glossary</h1>
     	<h2>Biodegradable:</h2>
@@ -63,7 +89,10 @@
 
 <div class='sources'>
 <h1>Methodology and Data</h1>
- <p><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</p>
+    <ul>
+         <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
+         <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
+     </ul>
 </div>
 </div>
 
