--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -3,7 +3,7 @@
     <a href='profile.html'>Profile</a>
 </nav>
 
-	<section class='container'>
+	<section class='container' ng-controller='ProductIndexController as products'>
 	<!-- Repeat directive iterates over products collection to render each product--> 
 		<div ng-repeat='product in products'>
 			<div>
