--- a/client/public/templates/productNew.html
+++ b/client/public/templates/productNew.html
@@ -4,7 +4,7 @@
     <a href='productIndex.html'>All Products</a>
 </nav>
 <!-- Register a controller for section of application. -->
-			<form id='product-form' ng-controller="ProductController as productCtrl" ng-submit="submit()">
+			<form id='product-form' ng-controller="ProductNewController as productCtrl" ng-submit="submit()">
 				<!-- Name input -->
 				<table style='width:100%''>
 					<div class='form labels'>
