updated about and login templates

--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,5 +1,6 @@
 <nav>
-    <a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
+    <a href='signup.html'>Sign Up</a> or 
+    <a href='login.html'>Login</a>
     <a href='profile.html'>Profile</a>
     <a href='productIndex.html'>All Products</a>
     <a href='productNew.html'>Add a Product</a>
@@ -11,89 +12,96 @@
         	<p>This is a community for those who want to analyze and share information regarding the origin and production of their purchases, as well as the impacts they have on all species and the resources they depend on.</p>
         	<p>We believe nature provides us with the tools needed to design quality, yet affordable products that are not only sustainable, but envrionmentally-restorative and all-species-friendly. </p>
 </div>
-
     <div class='threats'>
         <h2>What are some of the biggest threats faced by earth and all species today?</h2>
             <h3>Fishing and Bycatch</h3>
             <h3>Climate Change</h3>
             <h3>Deforestation</h3>
-            <img src='https://media.giphy.com/media/R8c8b8EWKIKoU/giphy.gif' width="300" height="300"/>
+         
+            <img src='https://media.giphy.com/media/ekb69d2XpdWSY/giphy.gif' width="300" height="300"/>
+              <img src='https://media.giphy.com/media/R8c8b8EWKIKoU/giphy.gif' width="300" height="300"/> 
+           
             <h3>Animal Agriculture</h3>
             <h3>Wildlife trade and poaching</h3>
-            <img src='caged.gif' width="300" height="300"/>
             <h3>Oil & Gas Deveopment / Extraction</h3>
             <h3>Waste</h3>
             <h3>Infrastructure</h3>
+             <img src='https://media.giphy.com/media/12tdIJvLTmxs7C/giphy.gif' width="300" height="300"/>
             <h3>Pollution</h3>
-            <h3>Soil Erosion and Degredation</h3>
-            <img src='oil.gif' width="300" height="300"/>
-            <img src='https://media.giphy.com/media/10lOFFB9NizBrW/giphy.gif' width="300" height="300"/>
-            <img src='https://media.giphy.com/media/ekb69d2XpdWSY/giphy.gif' width="300" height="300"/>
-            <img src='hhttps://media.giphy.com/media/11iHkEcgPc0Gkw/giphy.gif' width="300" height="300"/>
-            <img src='https://media.giphy.com/media/eyoofAftoUKic/giphy.gif' width="300" height="300"/>
-            <img src='https://media.giphy.com/media/12tdIJvLTmxs7C/giphy.gif' width="300" height="300"/>
-</div>
-<div class='alternatives'>
-        <h2>What alternative solutions and tools exist?</h2>
-            <h3>Hemp</h3>
-            
-</div>
-<div class='glossary'>
-    <h1>Glossary</h1>
-    	<h2>Biodegradable:</h2>
-            <p>capable of being broken down especially into innocuous products by the action of living things (as microorganisms)</p>
-
-        <h2>Sector:</h2>
-        	<p>One of a few general segments in the economy within which a large group of companies can be categorized. An economy can be broken down into about a dozen sectors, which can describe nearly all of the business activity in that economy.</p>
-       	<h2>Industry:</h2>
-        	<ul>
-            	<li>A much more specific grouping of companies with highly similar business activities. Essentially, industries are created by further breaking down sectors into more defined groupings. Each of the dozen or so sectors will have a varying number of industries, but it can be in the hundreds.</li>
-            </ul>
-        <h2><a href='http://www.investopedia.com/ask/answers/05/industrysector.asp'>Sustainability</a>:</h2>
-        	<ul>
-        		<li>capable of being sustained</li>
-                <li>of, relating to, or being a method of harvesting or using a resource so that the resource is not depleted or permanently damaged</li>
-                <li> of or relating to a lifestyle involving the use of sustainable methods</li>
-            </ul>         	
-        <h2>Renewable:</h2>
-</div>
-            	
-<div class='logos'>
-<!-- Organize logo ceritifcation info by sector and industry -->
-	<div class='food_and_beverage'>
-        <ul>
-            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wsda-organic.png'/>
-            <li>WSDA Organic provides technical information about organic food production and assists in the development of markets for the organic food industry</li>
-            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-sustainability-mark.png'/>
-            <li>WQA Sustainability Mark means that production of the listed drinking water treatment systems has been audited and evaluated by the Water Quality Association</li>
-            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-gold-seal.png'/>
-            <li>WQA Gold Seal offers certification of all products and chemicals that contact drinking water. </li>
-        </ul>
-    <div class='energy'>
-        <ul>
-            <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/WindMade.png'/>
-            <li>WindMade label identifys products and companies using wind energy. </li>
-        </ul>
+            <h3>Soil Erosion and Degredation</h3>         
     </div>
 
-    <div class='envrionment'>
-     <ul>
+    <div class='alternatives'>
+            <h2>What alternative solutions and tools exist?</h2>
+    </div>
+
+    <div class='glossary'>
+        <h1>Glossary</h1>
+        	<h2>Biodegradable:</h2>
+                <p>capable of being broken down especially into innocuous products by the action of living things (as microorganisms)</p>
+            <h2>Sector:</h2>
+            	<p>one of a few general segments in the economy within which a large group of companies can be categorized. An economy can be broken down into about a dozen sectors, which can describe nearly all of the business activity in that economy.</p>
+           	<h2>Industry:</h2>
+            	<ul>
+                	<li>a much more specific grouping of companies with highly similar business activities... industries are created by further breaking down sectors into more defined groupings. Each of the dozen or so sectors will have a varying number of industries ... it can be in the hundreds.</li>
+                </ul>
+            <h2>
+                <a href='http://www.investopedia.com/ask/answers/05/industrysector.asp'>Sustainability</a>:</h2>
+            	   <ul>
+                		<li>capable of being sustained</li>
+                        <li>of, relating to, or being a method of harvesting or using a resource so that the resource is not depleted or permanently damaged</li>
+                        <li> of or relating to a lifestyle involving the use of sustainable methods
+                        </li>
+                    </ul>         	
+            <h2>Renewable:</h2>
+    </div>
+                	
+    <div class='logos'>
+    <!-- Organize logo ceritifcation info by sector and industry -->
+    	<div class='food_and_beverage'>
+            <h1>Certified logos</h1>
+                <h2>Food & Beverage</h2>
+                    <ul>
+                        <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wsda-organic.png'/>
+                            <li>
+                                <h3>WSDA Organic</h3> provides technical information about organic food production and assists in the development of markets for the organic food industry
+                            </li>
+                        <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-sustainability-mark.png'/>
+                            <li>
+                                <h3>WQA Sustainability Mark</h3>means that production of the listed drinking water treatment systems has been audited and evaluated by the Water Quality Associatio
+                            </li>
+                        <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wqa-gold-seal.png'/>
+                            <li>
+                                <h3>WQA Gold Seal</h3> offers certification of all products and chemicals that contact drinking water.
+                            </li>
+                    </ul>
+        </div>
+        <div class='energy'>
+            <h2>Energy</h2>
+                <ul>
+                    <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/WindMade.png'/>
+                        <li>
+                            <h3>WindMade</h3> label identifys products and companies using wind energy. 
+                        </li>
+                </ul>
+        </div>
+
+        <div class='envrionment'>
+         <ul>            
             <img src='http://www.ecolabelindex.com/files/ecolabel-logos-sized/wildlife-habitat.png'/>
-            <li>Wildlife Habitat Conservation Certification recognizes wildlife habitat management and conservation education programs.</li>
-        </ul>
-    </div>
-
+                <li>    
+                    <h3>Wildlife Habitat Conservation Certification<h3>recognizes wildlife habitat management and conservation education programs.
+                </li>
+            </ul>
         </div>
     </div>
-</div>
-
-<div class='sources'>
-<h1>Methodology and Data</h1>
-    <ul>
-         <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
-         <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
-     </ul>
-</div>
+    <div class='sources'>
+    <h1>Methodology and Data</h1>
+        <ul>
+             <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
+             <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels</a></li>
+         </ul>
+    </div>
 </div>
 
 <footer>
