--- a/client/public/templates/productIndex.html
+++ b/client/public/templates/productIndex.html
@@ -2,7 +2,7 @@
 	<a href='signup.html'>Sign Up</a> or <a href='login.html'>Login</a>
     <a href='profile.html'>Profile</a>
 </nav>
-	<section class='container' ng-controller='ProductIndexController as products'>
+	<section class='container' ng-controller='ProductsController as allProducts'>
 	<!-- Repeat directive iterates over products collection to render each product--> 
 		<div ng-repeat='product in products'>
 			<div>
