--- a/client/public/templates/productShow.html
+++ b/client/public/templates/productShow.html
@@ -6,7 +6,7 @@
 </nav>
 	<!-- Create Angular views and build UI by templating directly into HTML with expressions.
 	 -->
-	<section class='container' ng-controller='ProductShowController as product'>
+	<section class='container' ng-controller='ProductsController as oneProduct'>
 		<div>
 		<h2 class='product_name'>{{product.product_name}}</h2>
 			<h3 class='company_name'>{{product.company_name}}</h3>
